monitoring/gateway.yaml
# HTTPRoute for graf.kaayaka.in (Grafana)

apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana-routes
  namespace: monitoring
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: traefik-system
      sectionName: https
  hostnames:
    - "graf.kaayaka.in"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: prom-grafana
          port: 80
